--- a/app/src/main/res/layout/activity_home_screen1.xml
+++ b/app/src/main/res/layout/activity_home_screen1.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_bgcolor"
-    tools:context=".MainActivity">
+    tools:context="com.ar.digi_bell.MainActivity">
 
 
 
