--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_android___1"
-    tools:context=".Scanner">
+    tools:context="com.ar.digi_bell.Scanner">
 
     <ImageView
         android:layout_width="200dp"
