--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -144,11 +144,8 @@
     <Button
         android:id="@+id/loginCnfrmx"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_height="46dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
         android:layout_weight="1"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-condensed-medium"
@@ -161,8 +158,7 @@
         app:layout_constraintEnd_toEndOf="@+id/btnSignInPhn"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btnSignInPhn"
-        app:layout_constraintTop_toTopOf="@+id/btnSignInPhn"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/btnSignInPhn" />
 
     <Button
         android:id="@+id/btnSignInPhn"
